--- a/main.html
+++ b/main.html
@@ -326,6 +326,366 @@
                 margin-top: 20px;
             }
         }
+
+        /* Tablet Styles */
+        @media (max-width: 768px) {
+            body {
+                padding: 10px;
+            }
+
+            .container {
+                border-radius: 15px;
+                min-height: auto;
+            }
+
+            .form-section {
+                padding: 20px;
+            }
+
+            .preview-section {
+                padding: 20px;
+            }
+
+            .app-title h1 {
+                font-size: 24px;
+            }
+
+            .section-title {
+                font-size: 18px;
+            }
+
+            .form-group {
+                margin-bottom: 20px;
+            }
+
+            input, textarea, select {
+                padding: 12px;
+                font-size: 14px;
+            }
+
+            button {
+                padding: 12px 20px;
+                font-size: 14px;
+            }
+
+            .resume {
+                padding: 15mm;
+                border-radius: 8px;
+            }
+
+            .resume-header {
+                flex-direction: column;
+                text-align: center;
+                gap: 15px;
+            }
+
+            .profile-img {
+                width: 100px;
+                height: 100px;
+                margin-right: 0;
+            }
+
+            .header-text h1 {
+                font-size: 24px;
+            }
+
+            .header-text p {
+                font-size: 16px;
+            }
+
+            .contact-info {
+                justify-content: center;
+            }
+
+            .resume-section h2 {
+                font-size: 18px;
+            }
+
+            .experience-item, .education-item {
+                padding-left: 15px;
+            }
+
+            .experience-item h3, .education-item h3 {
+                font-size: 16px;
+            }
+
+            .skills-list {
+                gap: 8px;
+            }
+
+            .skill {
+                padding: 6px 12px;
+                font-size: 12px;
+            }
+        }
+
+        /* Mobile Styles */
+        @media (max-width: 480px) {
+            body {
+                padding: 5px;
+            }
+
+            .container {
+                border-radius: 10px;
+            }
+
+            .form-section, .preview-section {
+                padding: 15px;
+            }
+
+            .app-title h1 {
+                font-size: 20px;
+            }
+
+            .app-title p {
+                font-size: 14px;
+            }
+
+            .section-title {
+                font-size: 16px;
+                margin: 20px 0 15px;
+            }
+
+            .form-group {
+                margin-bottom: 15px;
+            }
+
+            input, textarea, select {
+                padding: 10px;
+                font-size: 13px;
+                border-radius: 8px;
+            }
+
+            textarea {
+                min-height: 80px;
+            }
+
+            button {
+                padding: 10px 15px;
+                font-size: 13px;
+                border-radius: 8px;
+            }
+
+            .add-btn, .generate-btn {
+                padding: 12px;
+                font-size: 14px;
+            }
+
+            .resume {
+                padding: 10mm;
+                border-radius: 6px;
+            }
+
+            .resume-header {
+                margin-bottom: 20px;
+                padding-bottom: 20px;
+            }
+
+            .profile-img {
+                width: 80px;
+                height: 80px;
+            }
+
+            .header-text h1 {
+                font-size: 20px;
+            }
+
+            .header-text p {
+                font-size: 14px;
+            }
+
+            .contact-info {
+                flex-direction: column;
+                gap: 8px;
+                font-size: 13px;
+            }
+
+            .resume-section {
+                margin-bottom: 20px;
+            }
+
+            .resume-section h2 {
+                font-size: 16px;
+                margin-bottom: 15px;
+            }
+
+            .experience-item, .education-item {
+                margin-bottom: 15px;
+                padding-left: 10px;
+            }
+
+            .experience-item h3, .education-item h3 {
+                font-size: 14px;
+            }
+
+            .experience-item .date, .education-item .date {
+                font-size: 12px;
+            }
+
+            .skills-list {
+                gap: 6px;
+            }
+
+            .skill {
+                padding: 4px 8px;
+                font-size: 11px;
+            }
+
+            .resume-controls {
+                flex-direction: column;
+                gap: 10px;
+            }
+
+            .download-btn {
+                padding: 12px 20px;
+                font-size: 14px;
+            }
+
+            .image-upload-label {
+                padding: 15px;
+            }
+
+            .image-upload-label i {
+                font-size: 30px;
+            }
+
+            .image-preview {
+                width: 120px;
+                height: 120px;
+            }
+
+            .color-picker {
+                gap: 8px;
+            }
+
+            .color-option {
+                width: 25px;
+                height: 25px;
+            }
+
+            .template-selector {
+                flex-direction: column;
+                gap: 10px;
+            }
+
+            .template-option {
+                padding: 8px;
+            }
+
+            .progress-bar {
+                height: 4px;
+            }
+        }
+
+        /* Extra Small Mobile */
+        @media (max-width: 320px) {
+            .form-section, .preview-section {
+                padding: 10px;
+            }
+
+            .app-title h1 {
+                font-size: 18px;
+            }
+
+            .section-title {
+                font-size: 14px;
+            }
+
+            input, textarea, select {
+                padding: 8px;
+                font-size: 12px;
+            }
+
+            button {
+                padding: 8px 12px;
+                font-size: 12px;
+            }
+
+            .resume {
+                padding: 8mm;
+            }
+
+            .header-text h1 {
+                font-size: 18px;
+            }
+
+            .header-text p {
+                font-size: 12px;
+            }
+
+            .contact-info {
+                font-size: 11px;
+            }
+
+            .resume-section h2 {
+                font-size: 14px;
+            }
+
+            .experience-item h3, .education-item h3 {
+                font-size: 13px;
+            }
+
+            .skill {
+                padding: 3px 6px;
+                font-size: 10px;
+            }
+        }
+
+        /* Landscape Orientation */
+        @media (orientation: landscape) and (max-height: 600px) {
+            .container {
+                flex-direction: row;
+            }
+
+            .form-section {
+                width: 50%;
+                max-height: 100vh;
+                overflow-y: auto;
+            }
+
+            .preview-section {
+                width: 50%;
+                padding: 10px;
+            }
+
+            .resume {
+                transform: scale(0.8);
+                transform-origin: top center;
+            }
+        }
+
+        /* Print Styles */
+        @media print {
+            body {
+                background: white;
+                padding: 0;
+            }
+
+            .container {
+                box-shadow: none;
+                border-radius: 0;
+            }
+
+            .form-section {
+                display: none;
+            }
+
+            .preview-section {
+                width: 100%;
+                padding: 0;
+            }
+
+            .resume {
+                box-shadow: none;
+                border-radius: 0;
+                width: 100%;
+                margin: 0;
+            }
+
+            .resume-controls {
+                display: none;
+            }
+        }
         
         .section-item {
             background-color: #f9f9f9;
