Add CV3 and CV4 templates with unique designs
CV3 Template - Modern Sidebar Layout:
- Professional sidebar design with contact panel
- Dark gradient sidebar with light main content
- Profile photo integration with circular styling
- Skills displayed as tags in sidebar
- Timeline-style experience and education sections
- 6 beautiful color themes (Ocean Blue, Crimson Red, Forest Green, Royal Purple, Sunset Orange, Sky Blue)
- Responsive design for all screen sizes
- High-quality PDF generation with html2canvas and jsPDF

CV4 Template - Creative Timeline Design:
- Creative timeline layout with visual timeline elements
- Gradient header section with profile photo
- Contact grid with hover effects
- Timeline sections with connecting lines and dots
- Skills displayed as interactive cards with icons
- 6 unique color themes (Purple Dream, Ocean Blue, Golden Sun, Cherry Red, Emerald Green, Pink Rose)
- Playfair Display serif fonts for elegant typography
- Responsive design optimized for mobile devices

Landing Page Updates:
- Added CV3 and CV4 template buttons with unique styling
- Updated footer links to include all 4 templates
- Enhanced button hover effects with color-specific shadows
- Professional descriptions for each template

Technical Features:
- Consistent Namibian placeholder data across all templates
- Advanced PDF generation with loading states and error handling
- Dynamic filename generation with template identification
- Responsive design with comprehensive media queries
- Modern CSS animations and transitions
- Font Awesome icons for visual enhancement

All templates include:
- Professional color schemes
- Mobile-optimized layouts
- Print-ready PDF generation
- Consistent user experience
- Modern design trends

--- a/index.html
+++ b/index.html
@@ -307,6 +307,24 @@
             box-shadow: 0 20px 50px rgba(15, 23, 42, 0.4);
         }
 
+        .btn-cv3 {
+            background: linear-gradient(135deg, #2563eb 0%, #1d4ed8 100%);
+            color: white;
+        }
+
+        .btn-cv3:hover {
+            box-shadow: 0 20px 50px rgba(37, 99, 235, 0.4);
+        }
+
+        .btn-cv4 {
+            background: linear-gradient(135deg, #8b5cf6 0%, #7c3aed 100%);
+            color: white;
+        }
+
+        .btn-cv4:hover {
+            box-shadow: 0 20px 50px rgba(139, 92, 246, 0.4);
+        }
+
         .btn-icon {
             font-size: 3rem;
             margin-bottom: 0.5rem;
@@ -958,6 +976,18 @@
                 <div class="btn-title">CV2 Template</div>
                 <div class="btn-description">Modern dark theme<br>Ideal for designers & developers</div>
             </a>
+            
+            <a href="CV3/main.html" class="template-btn btn-cv3">
+                <i class="fas fa-user-tie btn-icon"></i>
+                <div class="btn-title">CV3 Template</div>
+                <div class="btn-description">Professional sidebar layout<br>Perfect for corporate roles</div>
+            </a>
+            
+            <a href="CV4/main.html" class="template-btn btn-cv4">
+                <i class="fas fa-timeline btn-icon"></i>
+                <div class="btn-title">CV4 Template</div>
+                <div class="btn-description">Creative timeline design<br>Ideal for creative professionals</div>
+            </a>
         </div>
 
         <!-- Footer -->
@@ -979,6 +1009,8 @@
             <div class="footer-links">
                 <a href="main.html">CV1 Template</a>
                 <a href="CV2/main.html">CV2 Template</a>
+                <a href="CV3/main.html">CV3 Template</a>
+                <a href="CV4/main.html">CV4 Template</a>
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2024 <span>Purpose Technology</span>. All rights reserved.</p>
