Improve landing page responsiveness and alignment; add animated hero background (pulse + floating icons); refine typography and link pills; mobile nav tweaks.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             font-weight: 800; font-size: 14px;
         }
 
-        .nav-links { display: flex; gap: 26px; align-items: center; }
+        .nav-links { display: flex; gap: 26px; align-items: center; flex-wrap: wrap; }
         .nav-links a { color: var(--muted); text-decoration: none; font-weight: 500; }
 
         .login-btn {
@@ -62,9 +62,9 @@
         /* Hero */
         .hero {
             position: relative;
-            max-width: 1000px;
-            margin: 60px auto 40px;
-            padding: 40px 20px 60px;
+            max-width: 1100px;
+            margin: 40px auto;
+            padding: 30px 20px 60px;
             text-align: center;
         }
 
@@ -75,7 +75,7 @@
             background-image: linear-gradient(rgba(15,23,42,0.04) 1px, transparent 1px),
                               linear-gradient(90deg, rgba(15,23,42,0.04) 1px, transparent 1px);
             background-size: 40px 40px, 40px 40px;
-            mask-image: radial-gradient(ellipse at center, black 40%, transparent 70%);
+            mask-image: radial-gradient(ellipse at center, black 38%, transparent 70%);
         }
 
         /* Radial glow */
@@ -89,11 +89,17 @@
             position: absolute; inset: -40px; border-radius: 40px; z-index: 0;
             background: radial-gradient(closest-side, rgba(34,197,94,0.35), transparent 70%);
             filter: blur(10px);
+            animation: pulse 4s ease-in-out infinite;
         }
         .glow-inner {
             position: relative; z-index: 1; width: 64px; height: 64px; border-radius: 16px;
             background: #0b1220; border: 1px solid rgba(148,163,184,0.25);
             display: grid; place-items: center; color: var(--brand); font-weight: 800;
+        }
+
+        @keyframes pulse {
+            0%,100% { opacity: .6; transform: scale(1); }
+            50% { opacity: 1; transform: scale(1.05); }
         }
 
         .resume-element:nth-child(2) {
@@ -256,16 +262,17 @@
             padding: 2rem;
         }
 
-        .hero h1 { font-size: 48px; line-height: 1.1; letter-spacing: -0.02em; margin: 0 auto 16px; max-width: 900px; }
+        .hero h1 { font-size: clamp(28px, 6vw, 56px); line-height: 1.08; letter-spacing: -0.02em; margin: 0 auto 16px; max-width: 980px; }
         .hero h1 strong { font-weight: 800; }
-        .subtext { color: var(--muted); max-width: 680px; margin: 0 auto; }
+        .subtext { color: var(--muted); max-width: 720px; margin: 0 auto; font-size: clamp(14px, 2.4vw, 18px); }
 
         /* Hidden old template cards on landing (kept for links below hero) */
         .template-buttons { display: none; }
 
         /* Quick links row like mock */
-        .links-row { display: flex; gap: 18px; justify-content: center; margin-top: 30px; }
-        .link-pill { padding: 10px 14px; border-radius: 999px; font-weight: 600; text-decoration: none; color: #0f172a; background: #f8fafc; border: 1px solid #e2e8f0; }
+        .links-row { display: flex; gap: 12px; justify-content: center; margin-top: 30px; flex-wrap: wrap; }
+        .link-pill { padding: 10px 14px; border-radius: 999px; font-weight: 600; text-decoration: none; color: #0f172a; background: #f8fafc; border: 1px solid #e2e8f0; transition: transform .2s ease, box-shadow .2s ease; }
+        .link-pill:hover { transform: translateY(-2px); box-shadow: 0 6px 16px rgba(2,6,23,0.08); }
 
         .template-btn {
             padding: 1.5rem 3rem;
@@ -358,6 +365,29 @@
 
         /* Footer (keep minimal) */
         .footer { text-align: center; padding: 40px 20px; color: var(--muted); }
+
+        /* Floating micro icons around glow */
+        .float-wrap { position: relative; width: 0; height: 0; margin: 0 auto; }
+        .ficon { position: absolute; color: var(--brand); opacity: .8; }
+        .f1 { top: -40px; left: -120px; animation: drift 7s ease-in-out infinite; }
+        .f2 { top: -60px; right: -120px; animation: drift 8s ease-in-out -1s infinite; }
+        .f3 { top: 40px; left: -140px; animation: drift 9s ease-in-out -2s infinite; }
+        .f4 { top: 60px; right: -140px; animation: drift 10s ease-in-out -3s infinite; }
+        @keyframes drift { 0%,100%{ transform: translateY(0); opacity:.9 } 50%{ transform: translateY(-10px); opacity:1 } }
+
+        /* Responsive adjustments */
+        @media (max-width: 900px){
+            .nav { padding: 14px 16px; }
+            .nav-links { gap: 16px; }
+            .glow { width: 180px; height: 180px; }
+        }
+        @media (max-width: 640px){
+            .nav-left { gap: 8px; }
+            .nav-links { display:none; }
+            .login-btn { padding: 8px 12px; }
+            .links-row { gap: 8px; }
+            .link-pill { padding: 8px 12px; font-size: 14px; }
+        }
 
         .footer::before {
             content: '';
@@ -952,6 +982,12 @@
     <section class="hero">
         <div class="glow">
             <div class="glow-inner">LOGO</div>
+            <div class="float-wrap">
+                <i class="fas fa-bolt ficon f1"></i>
+                <i class="fas fa-wand-magic-sparkles ficon f2"></i>
+                <i class="fas fa-asterisk ficon f3"></i>
+                <i class="fas fa-sparkles ficon f4"></i>
+            </div>
         </div>
         <h1>Transform Text to Design in Minutes, <strong>Powered by AI</strong></h1>
         <p class="subtext">Generate beautiful and editable web designs from a simple text description. It empowers you to design faster than ever.</p>
