--- a/CV3/main.html
+++ b/CV3/main.html
@@ -193,6 +193,7 @@
         .resume {
             background: white;
             width: 210mm;
+            max-width: 100%;
             min-height: 297mm;
             box-shadow: 0 10px 40px rgba(0, 0, 0, 0.15);
             border-radius: 15px;
@@ -554,10 +555,11 @@
             }
             
             .resume {
-                width: 100%;
+                width: min(100%, 210mm);
                 margin-top: 20px;
                 grid-template-columns: 1fr;
             }
+            .preview-section{ overflow-x:auto; }
             
             .sidebar {
                 padding: 20px;
