--- a/CV4/main.html
+++ b/CV4/main.html
@@ -193,6 +193,7 @@
         .resume {
             background: white;
             width: 210mm;
+            max-width: 100%;
             min-height: 297mm;
             box-shadow: 0 15px 50px rgba(0, 0, 0, 0.15);
             border-radius: 20px;
@@ -609,9 +610,10 @@
             }
             
             .resume {
-                width: 100%;
+                width: min(100%, 210mm);
                 margin-top: 20px;
             }
+            .preview-section{ overflow-x:auto; }
         }
 
         @media (max-width: 768px) {
