--- a/main.html
+++ b/main.html
@@ -189,6 +189,7 @@
         .resume {
             background: white;
             width: 210mm;
+            max-width: 100%;
             min-height: 297mm;
             padding: 25mm;
             box-shadow: 0 5px 25px rgba(0, 0, 0, 0.1);
@@ -312,7 +313,7 @@
             padding: 15px 30px;
         }
         
-        @media (max-width: 1200px) {
+        @media (max-width: 1300px) {
             .container {
                 flex-direction: column;
             }
@@ -322,9 +323,10 @@
             }
             
             .resume {
-                width: 100%;
+                width: min(100%, 210mm);
                 margin-top: 20px;
             }
+            .preview-section{ overflow-x:auto; }
         }
 
         /* Tablet Styles */
