--- a/index.html
+++ b/index.html
@@ -968,7 +968,9 @@
 <body>
     <nav class="nav">
         <div class="nav-left">
-            <div class="logo-mark">LOGO</div>
+            <div class="logo-mark">
+                <img src="logo.jpg" alt="Logo" style="width:100%;height:100%;object-fit:contain;display:block;" loading="lazy" onerror="this.style.display='none';this.parentElement.textContent='LOGO';">
+            </div>
             <div class="nav-links">
                 <a href="#">Templates</a>
                 <a href="#">Community</a>
@@ -981,7 +983,9 @@
 
     <section class="hero">
         <div class="glow">
-            <div class="glow-inner">LOGO</div>
+            <div class="glow-inner">
+                <img src="logo.jpg" alt="Logo" style="width:100%;height:100%;object-fit:contain;display:block;" loading="lazy" onerror="this.style.display='none';this.parentElement.textContent='LOGO';">
+            </div>
             <div class="float-wrap">
                 <i class="fas fa-bolt ficon f1"></i>
                 <i class="fas fa-wand-magic-sparkles ficon f2"></i>
