--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
+            flex-wrap: nowrap;
         }
 
         .nav-left { display: flex; align-items: center; gap: 10px; }
@@ -51,7 +52,7 @@
             font-weight: 800; font-size: 14px;
         }
 
-        .nav-links { display: flex; gap: 26px; align-items: center; flex-wrap: wrap; }
+        .nav-links { display: flex; gap: 26px; align-items: center; flex-wrap: nowrap; white-space: nowrap; }
         .nav-links a { color: var(--muted); text-decoration: none; font-weight: 500; }
 
         .login-btn {
@@ -76,6 +77,7 @@
                               linear-gradient(90deg, rgba(15,23,42,0.04) 1px, transparent 1px);
             background-size: 40px 40px, 40px 40px;
             mask-image: radial-gradient(ellipse at center, black 38%, transparent 70%);
+            pointer-events: none;
         }
 
         /* Radial glow */
@@ -270,7 +272,7 @@
         .template-buttons { display: none; }
 
         /* Quick links row like mock */
-        .links-row { display: flex; gap: 12px; justify-content: center; margin-top: 30px; flex-wrap: wrap; }
+        .links-row { display: flex; gap: 12px; justify-content: center; margin-top: 30px; flex-wrap: wrap; position: relative; z-index: 1; }
         .link-pill { padding: 10px 14px; border-radius: 999px; font-weight: 600; text-decoration: none; color: #0f172a; background: #f8fafc; border: 1px solid #e2e8f0; transition: transform .2s ease, box-shadow .2s ease; }
         .link-pill:hover { transform: translateY(-2px); box-shadow: 0 6px 16px rgba(2,6,23,0.08); }
 
