--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
 
         .logo-mark {
             width: 28px; height: 28px; border-radius: 8px;
-            background: radial-gradient(closest-side, rgba(34,197,94,0.25), rgba(34,197,94,0.05));
-            border: 1px solid rgba(34,197,94,0.35);
+            background: transparent;
+            border: 0;
             display: grid; place-items: center; color: var(--brand);
             font-weight: 800; font-size: 14px;
         }
+        .logo-mark img{width:100%; height:100%; object-fit:contain; display:block; border-radius:6px}
 
         .nav-links { display: flex; gap: 26px; align-items: center; flex-wrap: nowrap; white-space: nowrap; }
         .nav-links a { color: var(--muted); text-decoration: none; font-weight: 500; }
@@ -95,9 +96,10 @@
         }
         .glow-inner {
             position: relative; z-index: 1; width: 64px; height: 64px; border-radius: 16px;
-            background: #0b1220; border: 1px solid rgba(148,163,184,0.25);
+            background: transparent; border: 0;
             display: grid; place-items: center; color: var(--brand); font-weight: 800;
         }
+        .glow-inner img{width:100%; height:100%; object-fit:contain; display:block; border-radius:12px; background:transparent}
 
         @keyframes pulse {
             0%,100% { opacity: .6; transform: scale(1); }
@@ -273,8 +275,13 @@
 
         /* Quick links row like mock */
         .links-row { display: flex; gap: 12px; justify-content: center; margin-top: 30px; flex-wrap: wrap; position: relative; z-index: 1; }
-        .link-pill { padding: 10px 14px; border-radius: 999px; font-weight: 600; text-decoration: none; color: #0f172a; background: #f8fafc; border: 1px solid #e2e8f0; transition: transform .2s ease, box-shadow .2s ease; }
+        .link-pill { padding: 10px 14px; border-radius: 999px; font-weight: 600; text-decoration: none; color: #0f172a; background: #f8fafc; border: 1px solid #e2e8f0; transition: transform .2s ease, box-shadow .2s ease; animation: floatUp 6s ease-in-out infinite; }
         .link-pill:hover { transform: translateY(-2px); box-shadow: 0 6px 16px rgba(2,6,23,0.08); }
+        .links-row .link-pill:nth-child(1){animation-delay: 0s}
+        .links-row .link-pill:nth-child(2){animation-delay: .6s}
+        .links-row .link-pill:nth-child(3){animation-delay: 1.2s}
+        .links-row .link-pill:nth-child(4){animation-delay: 1.8s}
+        @keyframes floatUp{0%,100%{transform: translateY(0)}50%{transform: translateY(-4px)}}
 
         .template-btn {
             padding: 1.5rem 3rem;
@@ -366,7 +373,7 @@
         }
 
         /* Footer (keep minimal) */
-        .footer { text-align: center; padding: 40px 20px; color: var(--muted); }
+        .footer { text-align: center; padding: 40px 20px; color: var(--muted); display:flex; justify-content:center; }
 
         /* Floating micro icons around glow */
         .float-wrap { position: relative; width: 0; height: 0; margin: 0 auto; }
