--- a/index.html
+++ b/index.html
@@ -981,7 +981,7 @@
                 <img src="logo.jpg" alt="Logo" style="width:100%;height:100%;object-fit:contain;display:block;" loading="lazy" onerror="this.style.display='none';this.parentElement.textContent='LOGO';">
             </div>
             <div class="nav-links">
-                <a href="#">Templates</a>
+                <a href="templates.html">Templates</a>
                 <a href="#">Community</a>
                 <a href="#">Tools</a>
                 <a href="#">Pricing</a>
