Redesign footer with dark gradient theme, 4-column layout, social links, and legal links; Create Coming Soon pages for Community, Tools, and Pricing with email notification forms; Update all navigation links across pages

--- a/templates.html
+++ b/templates.html
@@ -44,10 +44,10 @@
         <div class="nav-left">
             <a href="index.html" class="logo-mark"><img src="logo.jpg" alt="Logo" onerror="this.style.display='none'"></a>
             <div class="nav-links">
-                <a href="templates.html">Templates</a>
-                <a href="#">Community</a>
-                <a href="#">Tools</a>
-                <a href="#">Pricing</a>
+                <a href="templates.html" style="color: #22c55e;">Templates</a>
+                <a href="community.html">Community</a>
+                <a href="tools.html">Tools</a>
+                <a href="pricing.html">Pricing</a>
             </div>
         </div>
         <a class="login-btn" href="#">Login</a>
@@ -113,3 +113,6 @@
     <footer>© 2024 Purpose Technology. All rights reserved.</footer>
 </body>
 </html>
+
+
+
