Fix footer to span full page width across all platforms - removed wrapper div and added width: 100% to footer styles

--- a/index.html
+++ b/index.html
@@ -687,6 +687,7 @@
             color: #e2e8f0;
             padding: 60px 32px 32px;
             margin-top: 80px;
+            width: 100%;
         }
         .footer::before {
             content: '';
@@ -956,6 +957,7 @@
             .f1, .f2 { display: none; }
             .footer {
                 padding: 48px 20px 32px;
+                width: 100%;
             }
             .footer-grid {
                 grid-template-columns: 1fr 1fr;
@@ -1005,6 +1007,7 @@
             .f3, .f4 { display: none; }
             .footer {
                 padding: 40px 16px 32px;
+                width: 100%;
             }
             .footer-grid {
                 grid-template-columns: 1fr;
@@ -1680,8 +1683,8 @@
         </div>
     </section>
 
-        <!-- Footer -->
-        <footer class="footer">
+    <!-- Footer -->
+    <footer class="footer">
             <div class="footer-container">
                 <div class="footer-grid">
                     <div class="footer-brand-section">
@@ -1747,8 +1750,7 @@
                     </div>
                 </div>
             </div>
-        </footer>
-    </div>
+    </footer>
 
     <script>
         // Add some interactive effects
