--- a/index.html
+++ b/index.html
@@ -753,6 +753,7 @@
                 </a>
                 <div class="nav-links">
                     <a href="templates.html">Templates</a>
+                    <a href="cover-letter.html">Cover Letter</a>
                     <a href="community.html">Community</a>
                     <a href="tools.html">Tools</a>
                     <a href="pricing.html">Pricing</a>
@@ -833,6 +834,17 @@
                 <p>Visual timeline style with beautiful section accents. Perfect for showcasing your journey.</p>
                 <span class="template-badge">
                     <i class="fas fa-star"></i> Creative Design
+                </span>
+            </a>
+
+            <a href="cover-letter.html" class="template-card">
+                <div class="template-icon" style="background: linear-gradient(135deg, #f59e0b 0%, #ef4444 100%);">
+                    <i class="fas fa-envelope-open-text"></i>
+                </div>
+                <h3>Cover Letter Generator</h3>
+                <p>AI-powered cover letter generator with multiple templates and tones. Create professional cover letters in minutes.</p>
+                <span class="template-badge">
+                    <i class="fas fa-magic"></i> AI Powered
                 </span>
             </a>
         </div>
